manifests/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: database-deployment
  template:
    metadata:
      labels:
        app: database-deployment
    spec:
      containers:
        - name: database-deployment
          image: achoistic98/tgd_database:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: database-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: database-volume
          hostPath:
            path: /volumes
---
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    app: database-deployment
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
