manifests/golang.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: golang
  name: dep-golang
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golang
  template:
    metadata:
      labels:
        app: golang
    spec:
      serviceAccount: sa-golang
      automountServiceAccountToken: false
      containers:
      - name: golang
        image: golang:tgd
        # image: achoistic98/tgd-golang:latest
        # imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: 
              - all
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /app/cmd
          name: pvc-golang
      volumes:
        - name: pvc-golang
          persistentVolumeClaim:
            claimName: pvc-golang
---
apiVersion: v1
kind: Service
metadata:
  name: svc-golang
spec:
  selector:
    app: golang
  type: ClusterIP
  ports:
    - port: 8080
