manifests/jenkins.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: devops-system
spec:
  replicas: 1
  selector:
    matchLabels:
      devops: jenkins
  template:
    metadata:
      labels:
        devops: jenkins
    spec:
      securityContext:
            fsGroup: 1000 
            runAsUser: 1000
      serviceAccountName: jenkins-admin
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - name: httpport
              containerPort: 8080
            - name: jnlpport
              containerPort: 50000
          volumeMounts:
            - name: pvc-jenkins
              mountPath: /var/jenkins_home         
      volumes:
        - name: pvc-jenkins
          persistentVolumeClaim:
              claimName: pvc-jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: svc-jenkins
  namespace: devops-system
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  selector: 
    devops: jenkins
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
