manifests/member.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: member
  name: dep-member
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member
  template:
    metadata:
      labels:
        app: member
    spec:
      serviceAccount: sa-member
      restartPolicy: Always
      containers:
      - name: member
        image: member:tgd
        # image: achoistic98/tgd-member:latest
        # imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /app/src
          name: pvc-member
      volumes:
        - name: pvc-member
          persistentVolumeClaim:
            claimName: pvc-member
---
apiVersion: v1
kind: Service
metadata:
  name: svc-member
spec:
  selector:
    app: member
  type: ClusterIP
  ports:
    - port: 8000
