manifests/mysql-member.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-mysql-member
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-member
  template:
    metadata:
      labels:
        app: mysql-member
    spec:
      serviceAccount: sa-mysql-member
      automountServiceAccountToken: false
      containers:
        - name: dep-mysql-member
          image: mysql-member:tgd
          # image: achoistic98/tgd-mysql-member:latest
          ports:
            - containerPort: 3306
          volumeMounts:
          - mountPath: /var/lib/mysql
            name: pvc-mysql-member
      volumes:
        - name: pvc-mysql-member
          persistentVolumeClaim:
            claimName: pvc-mysql-member
---
apiVersion: v1
kind: Service
metadata:
  name: svc-mysql-member
spec:
  selector:
    app: mysql-member
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
